--- a/sample.css
+++ b/sample.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-body{font-family: Verdana, sans-self; font-size:0 8em;}
+body{font-family: Verdana, sans-serif; font-size:0.8em;}
 header, nav, section, article, footer
 {border:1px solid gray; margin:5px; padding:8px;}
 section#displayArea{height:210px;}
