--- a/rwd4.css
+++ b/rwd4.css
@@ -8,8 +8,7 @@
 .banner li{border:2px solid black; padding:10px; margin-bottom:10px; box-shadow:0 1px 3px gray;}
 .banner li img{width:30%; vertical-align:middle;}
 [class*="col-"]{width:100%}   
-@media only screen and (max-width: 600px) 
-{
+@media only screen and (max-width: 600px){
   .col-t-1{width:8.33%;}
   .col-t-2{width:16.66%;}
   .col-t-3{width:25%;}
@@ -23,8 +22,7 @@
   .col-t-11{width:91.66%;}
   .col-t-12{width:100%;}
 }
-@media only screen and (max-width: 768px) 
-{
+@media only screen and (max-width: 768px){
   .col-1{width:8.33%;}
   .col-2{width:16.66%;}
   .col-3{width:25%;}
